# tu

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  hf_registry.rs  lib.rs  main.rs  output.rs  scanner.rs  tokenizer.rs
tests/: cli.rs
tests/common/: mod.rs
tests/fixtures/: hf-tokenizer.json
