[package]
name = "tu"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
content_inspector = "0.2"
globset = "0.4"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiktoken-rs = "0.9.1"
tokenizers = "0.21"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
