[package]
name = "tu"
version = "0.0.1"
edition = "2024"

[package.metadata.release]
allow-branch = ["master"]
publish = false
push-remote = "origin"
tag-name = "v{{version}}"
tag-message = "release: v{{version}}"
pre-release-commit-message = "release: v{{version}}"
pre-release-hook = ["just", "release-changelog-hook"]

[[package.metadata.release.pre-release-replacements]]
file = "pyproject.toml"
search = '^version = "[^"]+"$'
replace = 'version = "{{version}}"'
min = 1

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
content_inspector = "0.2"
globset = "0.4"
ignore = "0.4"
include-flate = "0.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiktoken-rs = "0.9.1"
tokenizers = "0.21"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
